--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Customer Management Application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Sahil Bharal",
   "license": "ISC",
@@ -15,7 +15,21 @@
     "express-validator": "^5.3.0",
     "mongojs": "^2.6.0"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.7"
-  }
+  "engines": {
+    "node": "v9.10.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sbharal/customerapp.git"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "bugs": {
+    "url": "https://github.com/sbharal/customerapp/issues"
+  },
+  "homepage": "https://github.com/sbharal/customerapp#readme",
+  "devDependencies": {}
 }
